/util ruta, /util/countries, nadopunjen api
